force-app/main/default/objects/AppLog__c/AppLog__c.object-meta.xml
<CustomObject>
    <description>app log</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>AL-{0000000000}</displayFormat>
        <label>Application Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>