force-app/main/default/objects/AppLog__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <description>async apex job ID</description>
    <label>AsyncApexJob ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>