force-app/main/default/objects/AppLog__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <description>The log detail could be exception stack trace or detail of logging message</description>
    <label>Detail</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>