force-app/main/default/objects/AppLog__c/fields/EventSource__c.field-meta.xml
<CustomField>
    <fullName>EventSource__c</fullName>
    <description>the source where this log is generated</description>
    <label>Event Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>