force-app/main/default/objects/AppLog__c/fields/IsParameterTruncated__c.field-meta.xml
<CustomField>
    <fullName>IsParameterTruncated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>it indicates if the parameter (40K) data is truncated or not</description>
    <label>Is Parameter Truncated</label>
    <type>Checkbox</type>
</CustomField>