force-app/main/default/objects/AppLog__c/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <description>The log impact on the application.</description>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>