force-app/main/default/objects/AppLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>a log message that could be short description of the logging meaning</description>
    <label>Message</label>
    <length>5120</length>
    <type>LongTextArea</type>
</CustomField>