force-app/main/default/objects/AppLog__c/fields/Parameter__c.field-meta.xml
<CustomField>
    <fullName>Parameter__c</fullName>
    <description>a running data when the log is captured</description>
    <label>Parameter</label>
    <length>40960</length>
    <type>LongTextArea</type>
</CustomField>