force-app/main/default/objects/AppLog__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <description>the stage of the batch process when this log happens</description>
    <label>Phase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>