force-app/main/default/objects/AppLog__c/fields/ReplayId__c.field-meta.xml
<CustomField>
    <fullName>ReplayId__c</fullName>
    <description>The event replay ID</description>
    <label>Replay ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>