force-app/main/default/objects/AppLog__c/fields/RequestId__c.field-meta.xml
<CustomField>
    <fullName>RequestId__c</fullName>
    <description>Request Unique Identifier</description>
    <label>Request ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>